# trident

./: Cargo.toml  README.md  biblio.md
.cargo/: config.toml
biblio/: README.md
doc/: biblio.md  katex.html
src/: bitset.rs  bounded.rs  circuit.rs  genericity.rs  instruction.rs  lib.rs  linalg.rs  operation.rs  parameter.rs  provider.rs  storage.rs  symbol.rs  transpile.rs
src/circuit/: bit.rs  circuit.rs  gate.rs  instruction.rs  mod.rs  operation.rs  parameter.rs  qubit.rs  storage.rs  symbol.rs  transpile.rs
src/linalg/: complex.rs  matrix.rs  mod.rs
