[package]
name = "trident"
description = "Trident is a software development kit for quantum computing."
authors = ["Benjamin Lefebvre"]
edition = "2021"
version = "0.1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "doc/katex.html"]

[dependencies]
async-trait = "0.1.56"
bitflags = "1"
thiserror = "1"